# tBLAS

./: .gitignore  CMakeLists.txt  README.md
docs/: impl_details.md
examples/: CMakeLists.txt
examples/src/: main.cpp
include/tBLAS/: blas.hpp  constants.hpp  matrix.hpp  utils.hpp
include/tBLAS/BLAS/: matmul.hpp  transpose.hpp  utils.hpp
include/tBLAS/BLAS/matmul/: matmul.hpp
include/tBLAS/BLAS/matmul/kernels/: sm_mat.hpp  xl_mat.hpp
include/tBLAS/BLAS/transpose/: transpose.hpp
include/tBLAS/BLAS/transpose/kernels/: sm_mat.hpp  xl_mat.hpp
include/tBLAS/threading/: pool.cpp  pool.h  pool.hpp
tests/: CMakeLists.txt  helpers.hpp  tests_matmul.cpp  tests_matrix.cpp  tests_threadpool.cpp  tests_transpose.cpp  tests_utils.cpp  trivial.hpp  utils.hpp
tests/bench/: bench.cpp
